--- a/.github/workflows/check-assignment.yml
+++ b/.github/workflows/check-assignment.yml
@@ -26,6 +26,10 @@ jobs:
       run: |
         missing = checklist::install_missing_pkgs(dir = "./", glob = "hw-01.qmd")
       shell: Rscript {0}
+    - name: Install dsbox
+      run: |
+        devtools::install_github("rstudio-education/dsbox")
+      shell: Rscript {0}
     - name: Check Renders
       run: |
         checklist::check_qmd_renders("hw-01.qmd")
